dealer page responsive: fixed form height on iPhone 6 & up

--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -1,3 +1,6 @@
+//Settings
+$global-button-cursor: pointer;
+
 // Grid
 $global-width: 1250px;
 
