--- a/resources/assets/styles/pages/log-in.scss
+++ b/resources/assets/styles/pages/log-in.scss
@@ -1,6 +1,10 @@
 .log-in-form {
   max-width: 379px;
-  margin: 71px auto 59px;
+  padding: 79px 0 59px;
+  margin: 0 auto;
+  @media (max-width: 641px) {
+    min-height: calc(100vh - 216px);
+  }
   * {
     font-size: 16px;
   }
